--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
-{ 
-  "cleanUrls": true, 
-  "trailingSlash": false, 
-  "rewrites": [ 
-    { "source": "/", "destination": "/complete.html" }, 
-    { "source": "/predict", "destination": "/wild_fire2.html" } 
-  ] 
-} 
+{
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "rewrites": [
+    { "source": "/", "destination": "/complete.html" },
+    { "source": "/predict", "destination": "/wild_fire2.html" }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/complete.html", "dest": "/complete.html" },
+    { "src": "/wild_fire2.html", "dest": "/wild_fire2.html" }
+  ]
+}
+
